--- a/mqttFeira/Makefile
+++ b/mqttFeira/Makefile
@@ -1,3 +1,3 @@
 PROGRAM=mqttFeira
-EXTRA_COMPONENTS =  ~/esp-open-rtos/extras/pwm
+EXTRA_COMPONENTS =  ~/esp-open-rtos/extras/pwm  ~/esp-open-rtos/extras/paho_mqtt_c
 include ../../common.mk
