--- a/pocYamaha/Makefile
+++ b/pocYamaha/Makefile
@@ -1,3 +1,3 @@
 PROGRAM=mqtt_client
-EXTRA_COMPONENTS = extras/paho_mqtt_c
+EXTRA_COMPONENTS = extras/paho_mqtt_c ~/esp-open-rtos/extras/pwm
 include ../../common.mk
